# C-Guide

./: .gitignore  GNU GCC.md  README.md  Visual Studio.md
C/memóriakezelés/: Readme.md
C/memóriakezelés/example/: runtime_meretu_tomb.c
C/pointerek/: Readme.md
C/pointerek/example/: jatekos.c  swap.c
C/segfault/: Readme.md
C/segfault/example/: null_jo.c  null_rossz.c
C/undefined/: readme.md
C/undefined/example/: out_of_bounds.c
IDE & Compiler Setup/GNU GCC setup/: Readme.md
IDE & Compiler Setup/SDL2 CMake Setup/: Readme.md
IDE & Compiler Setup/SDL2 CMake Setup/example/: CMakeLists.txt  main.c
IDE & Compiler Setup/Visual Studio Code + CMake/: Readme.md
IDE & Compiler Setup/Visual Studio Code + CMake/example/: CMakeLists.txt
IDE & Compiler Setup/Visual Studio Setup/: Readme.md
IDE & Compiler Setup/Visual Studio Setup/example/: tutorial.sln
IDE & Compiler Setup/Visual Studio Setup/example/tutorial/: main.c  tutorial.vcxproj
